<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_fragment_exibir_post_compartilhar"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="ifRoom"
        android:title="@string/action_fragment_exibir_post_compartilhar"
        android:actionProviderClass="android.widget.ShareActionProvider"/>
    <item
        android:id="@+id/action_fragment_exibir_post_anexos"
        android:showAsAction="collapseActionView"
        android:title="@string/action_fragment_exibir_post_anexos"/>
    <item
        android:id="@+id/action_fragment_exibir_post_abrir_navegador"
        android:showAsAction="collapseActionView"
        android:title="@string/action_fragment_exibir_post_abrir_navegador"/>
</menu>
